--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^12.1.10",
     "animate.css": "^4.1.1",
     "bootstrap": "^4.6.0",
+    "emailjs-com": "^2.6.4",
     "node-sass": "^5.0.0",
     "react": "^17.0.2",
     "react-animate-on-scroll": "^2.1.5",
@@ -19,6 +20,8 @@
     "react-scripts": "4.0.3",
     "react-toastify": "^7.0.3",
     "react-typical": "^0.1.3",
+    "reactstrap": "^8.9.0",
+    "sweetalert": "^2.1.2",
     "typewriter-effect": "^2.17.0",
     "web-vitals": "^1.0.1"
   },
